apps/smartshopper/25days/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 25days-httproute
  namespace: smartshopper
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "feldrizz.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: service-25days
      port: 80
